Fixed dark mode

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ textarea {
     padding: 5px 10px;
 }
 
-#tutorial-button {
+#tutorial-button, #about-button {
     margin: 5px;
     padding: 5px 10px;
 }
